# agentic-data-pipeline-mcp

./: .gitignore  README.md  compose.yml
dbt/: .user.yml  AGENT_FRIENDLY_DOCS_GUIDE.md  Dockerfile  agent_access_reflection.md  dbt_project.yml  entrypoint.sh  profiles.yml  pyproject.toml  start_mcp.py
dbt/analyses/: campaign_sales_analysis.sql  email_campaign_performance.sql
dbt/models-m1/: models.yml
dbt/models-m1/staging/: sources.yml
dbt/models-m1/staging/adventure_db/: stg_adventure_db__customers.sql  stg_adventure_db__inventory.sql  stg_adventure_db__product_vendors.sql  stg_adventure_db__products.sql  stg_adventure_db__vendors.sql
dbt/models-m1/staging/ecom/: stg_ecom__email_campaigns.sql  stg_ecom__purchase_orders.sql  stg_ecom__sales_orders.sql
dbt/models-m1/staging/real_time/: stg_real_time__chat_logs.sql
dbt/seeds/: _seeds.yml  measures.csv  ship_method.csv
dbt/tests/: no_negative_inventory_amounts.sql  preferred_vendors_have_credit.sql  products_sell_end_date_is_null.sql  single_conversion_per_order.sql  web_analytics_freshness_check.sql  web_analytics_row_count_minimum.sql
mcp/: demo_client.py  pyproject.toml
prefect/: Dockerfile  agent_log.md  api_docs.md  mock_api.py  prd.md  pyproject.toml  snowflake_objects.sql
prefect/flows/: web_analytics_flow.py
prefect/tests/: test_web_analytics_flow.py
processor/: Dockerfile  init.sql  main.py  pyproject.toml
processor/etl/: extract.py  load.py
processor/utils/: connections.py  env_loader.py  watermark.py
sql/: check_data_flow_queries.sql  create_raw_tables.sql
(+6 files in other folders)
