[project]
name = "web-analytics-flow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "prefect>=2.14,<3.0",
    "snowflake-connector-python>=3.5",
    "requests>=2.31",
    "pandas>=2.1",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that require live credentials (deselect with '-m not integration')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
